Fix calls to deprecated APIs (#35)
The `Class.newInstance()` calls are deprecated.
Change them to use the `Class.getDeclaredConstructor().newInstance()`
form and handle the additional exceptions that can occur.